# keynetra

./: .env.example  .gitignore  .importlinter  .safety-policy.yml  .secrets.baseline  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  GOVERNANCE.md  Makefile  README.md  ROADMAP.md  SDK_GUIDE.md  SECURITY.md  SUPPORT.md  alembic.ini  architecture.md  coverage.json  docker-compose.dev.yml  docker-compose.yml  locustfile.py  openapi.json  py.typed  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
alembic/: env.py
alembic/versions/: 20260404_000001_init.py  20260404_000002_tenants_versioning_audit.py  20260404_000003_tenant_policy_version.py  20260404_000004_relationships.py  20260404_000005_audit_explainability.py  20260405_000006_idempotency.py  20260405_000007_resource_acl.py  20260405_000008_auth_model_revision.py  20260406_000009_policy_state_and_audit_correlation.py  20260407_000001_initial_schema_v0.py
contracts/: openapi.json  openapi.yaml
contracts/openapi/: keynetra-v0.1.0.yaml  keynetra-v0.1.2.yaml  openapi.json
deploy/: README.md
deploy/docker/: Dockerfile  README.md  docker-compose.yml
deploy/helm/: README.md
deploy/kubernetes/: README.md  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  networkpolicy.yaml  pdb.yaml  secret.yaml  service.yaml  serviceaccount.yaml
docs/: README.md  api-endpoints.md  api-reference.md  architecture.md  authorization-models.md  best-practices.md  cli-reference.md  cli.md  configuration.md  contributing.md  index.md  installation.md  policies.md  policy-engine.md  quickstart.md  resources.md  sdk-guide.md  testing-guide.md  troubleshooting.md  use-cases.md
docs/architecture/: authorization-pipeline.md  caching-and-consistency.md  data-models.md  system-architecture.md
docs/core-concepts/: authorization-models.md  consistency-and-revisions.md  request-evaluation-lifecycle.md
docs/deep-dive/: code-walkthrough.md  developer-manual.md  integration-cookbook.md
docs/deployment/: docker.md  helm.md  kubernetes.md
docs/development/: ci-cd-release.md  contributing.md  local-development.md  migrations.md  testing.md
docs/examples/: cli-workflows.md  end-to-end-api-flow.md  example-files.md  policy-patterns.md
docs/getting-started/: installation.md  overview.md  quickstart.md  runtime-modes.md
docs/models/: README.md  abac.md  acl.md  rbac.md  rebac.md
docs/operations/: caching.md  deployment-docker.md  deployment-kubernetes.md  observability.md  scaling.md  security.md  troubleshooting.md
docs/reference/: api-reference.md  auth-model-files.md  cli-reference.md  configuration-files.md  environment-variables.md  policy-files.md
examples/: auth-model.yaml  keynetra.yaml  policy_tests.yaml
examples/data/: acl_entries.json  relationships.json  roles.json  users.json
examples/forms/: developer_verification_forms.json
examples/models/: admin_delegation_model.yaml  document_model.yaml  finance_model.yaml  saas_tenant_model.yaml  team_collaboration_model.yaml
examples/policies/: document_access.yaml  finance_policy.yaml  finance_rules.json  ops_rules.polar  team_access.yaml
examples/requests/: api_requests.json  cli_examples.sh
examples/responses/: api_expected_responses.json
examples/scenarios/: real_world_authorization_scenarios.yaml
infra/docker/: Dockerfile  start.sh
integrations/: __init__.py  interfaces.py  opa_rego_adapter.py  openfga_adapter.py  terraform_provider.py
keynetra/: __init__.py  __main__.py  cli.py  headless.py  main.py  migrations.py  version.py
keynetra/api/: dependencies.py  errors.py  main.py  openapi.py  pagination.py  responses.py  router.py  service_modes.py
keynetra/config/: __init__.py  admin_auth.py  config_loader.py  file_loaders.py  policies.py  rate_limit.py  redis_client.py  sample_data.py  security.py  settings.py  tenancy.py
keynetra/domain/: errors.py  pagination.py
keynetra/engine/: __init__.py  keynetra_engine.py
keynetra/infrastructure/: errors.py  logging.py  metrics.py
keynetra/modeling/: __init__.py  model_validator.py  permission_compiler.py  schema_parser.py
keynetra/observability/: __init__.py  http_metrics.py  metrics.py
keynetra/services/: access_indexer.py  attribute_validation.py  audit.py  authorization.py  doctor.py  errors.py  impact_analysis.py  interfaces.py  policies.py  policy_admin.py  policy_dsl.py  policy_lint.py  policy_simulator.py  policy_store.py  policy_testing.py  relationship_store.py  relationships.py  resilience.py  revisions.py  seeding.py  tenant_store.py  user_store.py
keynetra/utils/: datetime.py
monitoring/loki/: loki-config.yml
monitoring/prometheus/: prometheus.yml
scripts/: check_coverage.py  check_load_budget.py  export_contracts.sh  test.sh
scripts/load_tests/: README.md  cache_warm_cold_locust.py  multi_tenant_locust.py  rbac_heavy_locust.py  rebac_graph_locust.py
tests/: test_access_index.py  test_access_routes_tenant.py  test_acl.py  test_admin_audit.py  test_admin_login.py  test_api.py  test_api_contract.py  test_async_access_routes.py  test_auth_model.py  test_authorization_performance.py  test_bootstrap_and_config_coverage.py  test_broad_coverage_push.py  test_cli_benchmark.py  test_cli_coverage_branches.py  test_compiled_policies.py  test_consistency_revisions.py  test_coverage_compat_and_cache.py  test_coverage_hardening.py  test_doctor.py  test_engine.py  test_enterprise_features.py  test_file_loaders_coverage.py  test_headless_modes.py  test_idempotency.py  test_impact_analysis.py  test_integrations_scaffolding.py  test_management_routes_coverage.py  test_metrics_endpoint.py  test_migration_utils.py  test_pagination_versioning_security.py  test_playground.py  test_policy_lint.py  test_policy_simulation.py  test_policy_state_canary.py  test_policy_testing.py  test_redis_multi_node.py  test_release_hardening.py  test_release_ready_coverage.py  test_resilience_cli.py  test_security_config_module.py  (+4 more)
(+90 files in other folders)
