[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "keynetra"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
keynetra = "keynetra.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["keynetra*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100
py_version = 311

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["keynetra", "tests"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "I", "UP", "SIM"]
ignore = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
branch = false
source = ["keynetra"]
omit = [
    "keynetra/api/router.py",
    "keynetra/engine/model_graph/graph_executor.py",
]

[tool.coverage.report]
fail_under = 90
skip_empty = true
omit = [
    "keynetra/api/router.py",
    "keynetra/engine/model_graph/graph_executor.py",
]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
disallow_untyped_defs = false
check_untyped_defs = true
exclude = ["^tests/"]
